--- a/.stylelintrc
+++ b/.stylelintrc
@@ -117,7 +117,7 @@
     "at-rule-name-newline-after": "always-multi-line",
     "at-rule-name-space-after": "always",
     "at-rule-no-unknown": [true, {
-      "ignoreAtRules": ["mixin", "define-mixin"]
+      "ignoreAtRules": ["mixin", "define-mixin", "include"]
     }],
     "at-rule-semicolon-newline-after": "always",
 
